# desktop-prompt-manager

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build-macos.sh  build.sh  migrate_db_to_md.py
qml/: main.qml
qml/components/: ConfirmDialog.qml  CustomButton.qml  FolderChip.qml  PromptCard.qml  SearchBar.qml  SettingsDialog.qml
qml/screens/: PlaceholderFillingScreen.qml  PromptEditScreen.qml  PromptListScreen.qml
src/: main.cpp
src/database/: database.cpp  database.h  folderdao.cpp  folderdao.h  promptdao.cpp  promptdao.h
src/models/: folder.cpp  folder.h  prompt.cpp  prompt.h  promptwithfolder.cpp  promptwithfolder.h
src/repository/: markdownpromptrepository.cpp  markdownpromptrepository.h  promptrepository.cpp  promptrepository.h  sqlpromptrepository.cpp  sqlpromptrepository.h
src/utils/: clipboardutils.cpp  clipboardutils.h  placeholderutils.cpp  placeholderutils.h  searchfilter.cpp  searchfilter.h  settingsmanager.h
src/viewmodels/: placeholderviewmodel.cpp  placeholderviewmodel.h  prompteditviewmodel.cpp  prompteditviewmodel.h  promptlistviewmodel.cpp  promptlistviewmodel.h
